<resources>
    <string name="app_name">Finder+ for replacements</string>
    <string name="names">Made by: \n •Maynor Ruiz Rodríguez \n •Johny Alexander Driotis \n •Jorge Fernando Castillo \n •Edgard Gerardo R. Ruíz</string>

    <string name="oSettings">Settings</string>
    <string name="oLogin">Login</string>
    <string name="oCreate">Create account</string>
    <string name="oRecover">Recover account</string>
    <string name="oAbout">About Us</string>
    <string name="oSearch">Search by ID</string>
    <string name="oSearchP">Search Place</string>
    <string name="oSearchR">Search Replacements</string>
    <string name="oLocate">Locate</string>
    <string name="oSave">Save</string>
    <string name="oEdit">Edit</string>
    <string name="oDelete">Delete</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!--Login-->
    <string name="welcome">Welcome</string>
    <string name="admin">Admin</string>
    <string name="customer">Customer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rPassword">Repeat Password</string>
    <string name="login">Sign in</string>
    <string name="eEmail">This email address is invalid</string>
    <string name="ePassword">This password is incorrect</string>
    <string name="required">This field is required</string>
    <string name="eFound">No Matches Found</string>

    <!--Providers-->
    <string name="title_activity_providers">Providers</string>
    <string name="pId">Provider ID</string>
    <string name="pName">Provider Name</string>
    <string name="pDirection">Provider Direction</string>
    <string name="pPhone">Provider Phone</string>

    <!--Workshops-->
    <string name="title_activity_workshops">Workshops</string>
    <string name="wId">Workshop ID</string>
    <string name="wName">Workshop Name</string>
    <string name="wDirection">Workshop Direction</string>
    <string name="wPhone">Workshop Phone</string>

    <!--Products-->
    <string name="title_activity_products">Products</string>
    <string name="id">ID:</string>
    <string name="name">Product:</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="quantity">Existences:</string>
    <string name="provider">Provider:</string>

</resources>
