<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/fab_margin"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:padding="5dp"
        android:contentDescription="icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Facebook" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="end"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="1dp"
            android:padding="1dp"
            android:textColor="@color/WhatsApp" />

        <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="1dp"
            android:padding="1dp"
            android:textColor="@color/WhatsApp" />

        <TextView
            android:id="@+id/txtProvider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="1dp"
            android:padding="1dp"
            android:textColor="@color/WhatsApp" />
    </LinearLayout>
</LinearLayout>