<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Providers">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_providers" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        fab:fab_addButtonSize="normal"
        app:fab_addButtonPlusIconColor="@color/gold"
        fab:fab_addButtonColorNormal="@color/green"
        fab:fab_addButtonColorPressed="@color/cyan"
        fab:fab_labelStyle="@style/Texts"
        fab:fab_labelsPosition="left" >

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            fab:fab_icon="@drawable/save"
            fab:fab_title="@string/oSave"
            fab:fab_colorNormal="@color/cyan"
            fab:fab_colorPressed="@color/green"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            fab:fab_icon="@drawable/search"
            fab:fab_title="@string/oSearch"
            fab:fab_colorNormal="@color/cyan"
            fab:fab_colorPressed="@color/green"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            fab:fab_icon="@drawable/edit"
            fab:fab_title="@string/oEdit"
            fab:fab_colorNormal="@color/cyan"
            fab:fab_colorPressed="@color/green"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            fab:fab_icon="@drawable/delete"
            fab:fab_title="@string/oDelete"
            fab:fab_colorNormal="@color/cyan"
            fab:fab_colorPressed="@color/green"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
